--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Chatbot Javascript </title>
-<link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Simple Chatbot in JavaScript" />
+    <title>Chatbot Javascript</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="glass">
-<h1>Ask Your Any Question??</h1>
-<h2>Yeah,ask Some Question</h2>
-<div class="input">
-<input
-type="text"
-id="userBox"
-onkeydown="if(event.keyCode == 13){ talk()}"
-placeholder="Type your Question"
-/>
-</div>
-<p id="chatLog">Answer Appering Hear</p>
-</div>
-<script src="index.js"></script>
+    <div class="glass">
+        <h1>Ask Your Question</h1>
+        <h2>Yeah, ask me a question!</h2>
+
+        <div class="input">
+            <input
+                type="text"
+                id="userBox"
+                onkeydown="if(event.keyCode == 13){ talk() }"
+                placeholder="Type your Question"
+            />
+        </div>
+
+        <p id="chatLog">Answer Appearing Here</p>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
